@@ -100,7 +100,7 @@ use warnings;
 use 5.014;
 use utf8;
 
-our $VERSION = '3.08';
+our $VERSION = '3.09';
 
 # Most of these have been adapted from
 # <https://github.com/public-transport/transport-apis> and
